Fix contrast for Download APK button text in barcode dialog

--- a/appinventor/appengine/src/com/google/appinventor/client/style/neo/neo.css
+++ b/appinventor/appengine/src/com/google/appinventor/client/style/neo/neo.css
@@ -1073,7 +1073,11 @@ select.ode-PropertyEditor[disabled] {
 }
 
 .ode-DialogBox .dialogContent td a {
-    color: gray-800;
+    color: selected-color;
+}
+
+.ode-DialogBox .download-button span {
+  color: gray-800;
 }
 
 .ode-SimpleMockContainer {
